# autonomous_vehicle

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  autonomous_vehicle_sensor_fixes.patch
main/: CMakeLists.txt  README.md  autonomy.c  autonomy.h  buzzer.c  buzzer.h  config.h  http_server.c  http_server.h  idf_component.yml  imu.c  imu.h  ina219.c  ina219.h  led_control.c  led_control.h  lidar.c  lidar.h  lidar_map.py  line_sensor.c  line_sensor.h  main.c  motor_driver.c  motor_driver.h  odometry.c  odometry.h  pyrometer.c  pyrometer.h  sht40.c  sht40.h  web_monitor.c  web_monitor.h  wifi_manager.c  wifi_manager.h
main/sensors/: imu.c  imu.h  ina219.c  ina219.h  lidar.c  lidar.h  line_sensor.c  line_sensor.h  odometry.c  odometry.h  pyrometer.c  pyrometer.h  sht40.c  sht40.h
tools/: README.md  lidar_map.py  requirements.txt
